--- a/sign.html
+++ b/sign.html
@@ -14,14 +14,24 @@
 	<article>
 		<div class="form-wrap">
 			<div class="form-group">
-				<input class="username" type="text" name="" placeholder="请输入用户名">
-				<input class="password" type="password" name="" placeholder="请输入密码">
-				<input class="password" type="password" name="" placeholder="请确认密码">
+				<input class="username" type="text" data-name="用户名" placeholder="请输入用户名" maxlength="20">
+				<span id="userInfo">用户名错误</span>
+				<input class="password" type="password" data-name="密码" placeholder="请输入密码" maxlength="20">
+				<span id="passInfo">密码错误</span>
+				<input class="password" type="password" data-name="确认密码" placeholder="请确认密码" maxlength="20">
+				<span id="confirmInfo">两次密码不相同</span>
 			</div>
 		</div>
 		<div class="btn-wrap">
-			<span>确定注册</span>
+			<span id="signBtn">确定注册</span>
 		</div>
 	</article>
+	<div class="signing-wrap">
+		<span class="fa process"></span>
+		<em class="fa signSucc"></em>
+	</div>
+
+	<script type="text/javascript" src="js/zepto.min.js"></script>
+	<script type="text/javascript" src="js/sign.js"></script>
 </body>
 </html>
