更新分类页

--- a/category.html
+++ b/category.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <header>商城分类</header>
-    <article></article>
+    <article>
+		<div class="banner">2</div>
+		<div class="nav-wrap">1</div>
+    </article>
     <footer>
 		<ul>
 			<li class="fa home">首页</li>
