完善列表页

--- a/category.html
+++ b/category.html
@@ -12,8 +12,26 @@
 <body>
     <header>商城分类</header>
     <article>
-		<div class="banner">2</div>
-		<div class="nav-wrap">1</div>
+		<div class="banner">
+			<ul>
+				<li>
+					<img src="images/banner-01.jpg">
+				</li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+		<div class="nav-wrap">
+			<ul>
+				<li class="w-50 color-1">1</li>
+				<li class="w-25 color-2">2</li>
+				<li class="w-25 color-3">3</li>
+				<li class="w-75 color-4">4</li>
+				<li class="w-25 color-5">5</li>
+				<li class="w-50 color-6">6</li>
+				<li class="w-50 color-7">7</li>
+			</ul>
+		</div>
     </article>
     <footer>
 		<ul>
