分类页面美化

--- a/category.html
+++ b/category.html
@@ -23,13 +23,13 @@
 		</div>
 		<div class="nav-wrap">
 			<ul>
-				<li class="w-50 color-1">1</li>
-				<li class="w-25 color-2">2</li>
-				<li class="w-25 color-3">3</li>
-				<li class="w-75 color-4">4</li>
-				<li class="w-25 color-5">5</li>
-				<li class="w-50 color-6">6</li>
-				<li class="w-50 color-7">7</li>
+				<li class="w-50 color-1"><span>外套</span><img src="images/jacket.png"></li>
+				<li class="w-25 color-2"><span>衬衫</span><img src="images/shirt.png"></li>
+				<li class="w-25 color-3"><span>T恤</span><img src="images/t-shirt.png"></li>
+				<li class="w-75 color-4"><span>晚礼服</span><img src="images/dress.png"></li>
+				<li class="w-25 color-5"><span>短裤</span><img src="images/jean.png"></li>
+				<li class="w-50 color-6"><span>打底裤</span><img src="images/dadiku.png"></li>
+				<li class="w-50 color-7"><span>凉鞋</span><img src="images/shooes.png"></li>
 			</ul>
 		</div>
     </article>
